# mcp-server-hub

./: .gitignore  .gitmodules  API-SERVERS-FINAL-STATUS.md  API-SERVERS-SETUP-GUIDE.md  API-SERVERS-STATUS.md  COMPLETE-SETUP-INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile.node  Dockerfile.python  GOOGLE-DRIVE-OAUTH-FIX.md  MCP-HUB-SETUP.md  README.md  credential-manager.js  mcp-hub-config-complete.json  mcp-hub-config-extended.json  mcp-hub-config-full.json  mcp-hub-config-minimal.json  mcp-hub-config-working-full.json  mcp-hub-config-working.json  mcp-hub-config.json  mcp-hub-main.json  package.json  requirements.txt  setup-python-servers.sh  start-mcp.bat  start-mcp.sh
configs/: additional.env  config.json  docker-compose-additional.yml  warp-mcp-config-additional.json  warp-mcp-config-backup.json
docs/: SETUP_SUMMARY.md  additional-servers-README.md
mcp-hub-mcp/: COMPREHENSIVE_MCP_SERVERS_LIST.md  DATABASE-INSERT-INTEGRATION.md  MCP-HUB-SETUP-COMPLETE.md  README.md  ROOTS-CAPABILITY.md  load-env.sh  manage-db-config.sh  mcp-config.json  mcp-hub-comprehensive.json  mcp-hub-essential.json  package-lock.json  test-database-insert.js  test-roots-config.json
servers/: DEPLOYMENT_GUIDE.md  PRODUCTION_README.md  README.md  build-all.sh  (+15 more)
servers/src/mcp-parser/: LICENSE  README.md  pyproject.toml
servers/src/mcp-parser/examples/: sample_jsonrpc_responses.py  usage_example.py
servers/src/mcp-parser/src/mcp_server_db_insert/: __init__.py  __main__.py  data_transformer.py  database_manager.py  jsonrpc_parser.py  server.py
servers/src/mcp-parser/tests/: test_jsonrpc_parser.py
(+19 files in other folders)
